--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,19 +14,23 @@
         android:theme="@style/Theme.TrabajoPractico"
         tools:targetApi="31">
         <activity
-            android:name=".home.HomeActivity"
+            android:name=".ToolbarActivity"
             android:exported="false" />
         <activity
-            android:name=".login.SignUpActivity"
+            android:name=".activity.HomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.SignUpActivity"
             android:exported="false" />
         <activity
             android:name=".main.MainActivity"
             android:exported="false" />
         <activity
-            android:name=".login.Login"
+            android:name=".activity.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
