--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,23 +14,25 @@
         android:theme="@style/Theme.TrabajoPractico"
         tools:targetApi="31">
         <activity
-            android:name=".ToolbarActivity"
+            android:name=".activity.LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.PersonajesActivity"
             android:exported="false" />
         <activity
             android:name=".activity.HomeActivity"
             android:exported="false" />
         <activity
+            android:name=".activity.LibrosActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.SignUpActivity"
             android:exported="false" />
         <activity
-            android:name=".main.MainActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activity.LoginActivity"
+            android:name=".activity.SplashScreenActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
