--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.TrabajoPractico"
         tools:targetApi="31">
         <activity
+            android:name=".activity.PersonajesActivityRetrofit"
+            android:exported="false" />
+        <activity
             android:name=".activity.NotificationActivity"
             android:exported="false" />
         <activity
