--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.got.trabajopractico">
     <!-- Permisos de android -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
@@ -15,9 +16,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TrabajoPractico"
         tools:targetApi="31">
-        <activity
-            android:name=".activity.PersonajesActivityRetrofit"
-            android:exported="false" />
         <activity
             android:name=".activity.NotificationActivity"
             android:exported="false" />
